syntax = "proto3";

option go_package = "github.com/DistilledP/postr/internal/proto";

service Postr {
    rpc Upload(ImageUpload) returns (ImageUploadResponse);
}

enum MimeType {
    UNKNOWN = 0;
    JPEG = 1;
    GIF = 2;
    PNG = 3;
}

enum Status {
    FAILED = 0;
    SUCCESS = 1;
}

message ImageUpload {
    string name = 1;
    bytes payload = 2;
    MimeType fileType = 3;
}

message ImageUploadResponse {
    Status status = 1;
    string errorMessage = 2;
    int64 sizeInBytes = 3;
}
